--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RestoConnect - Manager Home</title>
-    <link rel="stylesheet" href="homepage.css" />
+    <link rel="stylesheet" href="/homepage.css" />
   </head>
   <body>
     <header>
@@ -25,6 +25,6 @@
         <button onclick="goToDashboard()">Go to Dashboard</button>
       </div>
     </main>
-    <script src="homepgae.js"></script>
+    <script src="/homepgae.js"></script>
   </body>
 </html>
