Updated file with small changes

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -25,6 +25,6 @@
         <button onclick="goToDashboard()">Go to Dashboard</button>
       </div>
     </main>
-    <script src="/homepgae.js"></script>
+    <script src="/homepage.js"></script>
   </body>
 </html>
